[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Sprites and sheets/demon_fullani.png" type="Texture" id=1]
[ext_resource path="res://scripts/Demon.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/Retro Impact Punch Hurt 01.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=10]
resource_name = "Walk"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 11.25, 12.75 )

[sub_resource type="CapsuleShape2D" id=11]
radius = 12.0
height = 4.0

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 13.5, 3.25 )

[node name="Demon" type="KinematicBody2D"]
position = Vector2( 10, -40 )
scale = Vector2( 2, 2 )
collision_layer = 16
collision_mask = 34
script = ExtResource( 2 )
Speed = 40
switch = -1

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
vframes = 2
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Walk"
anims/Walk = SubResource( 10 )

[node name="BodyCollide" type="CollisionShape2D" parent="."]
position = Vector2( -4.75, 7.25 )
shape = SubResource( 9 )

[node name="AttBox" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttBox"]
position = Vector2( -5, 6 )
shape = SubResource( 11 )

[node name="HitWall" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="HitWallBox" type="CollisionShape2D" parent="HitWall"]
position = Vector2( -5, 16.5 )
shape = SubResource( 12 )

[node name="EdgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -16.5, 18 )
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 2
collide_with_areas = true

[node name="EdgeCheckRight" type="RayCast2D" parent="."]
position = Vector2( 6, 18 )
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 2
collide_with_areas = true

[node name="PunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -5, 6 )
shape = SubResource( 11 )

[connection signal="area_entered" from="AttBox" to="." method="_on_AttBox_area_entered"]
[connection signal="body_entered" from="HitWall" to="." method="_on_HitWall_body_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
